# resolutionizer-staging-area

./: .arcconfig  .arclint  .editorconfig  .envrc  .gitignore  .gitmodules  .tool-versions  README.md  circle.yml  default.nix  mix.exs  resolution.html  resolutionizer.nix  shell.nix
bulk-clause-import/: .stylish-haskell.yaml  Main.hs  default.nix  resolutionizer-bulk-clause-import.cabal  shell.nix
bulk-clause-import/src/: BulkClauseImport.hs
bulk-clause-import/test/: BulkClauseImportSpec.hs
client/: .gitignore  default.nix  elm-package.json  index.html  makefile  package.json
client/assets/css/: date-selector.css  styles.css
client/src/: Doc.elm  Main.elm  Util.elm
client/src/Api/: Doc.elm
client/src/App/: Model.elm  Router.elm  Update.elm  View.elm
client/src/Doc/: Model.elm
client/src/Inputs/: DateSelector.elm
client/src/States/: EditDoc.elm  Login.elm  PageNotFound.elm
client/tests/: TestUtil.elm  Tests.elm  elm-package.json
config/: dev.exs  resolutionizer.nix  system-ec2.nix  system-libvirt.nix  test.exs
lib/: resolutionizer.ex
lib/resolutionizer/: endpoint.ex
server/: .gitignore  README.md  default.nix  mix.exs
server/config/: config.exs  dev.exs  dogma.exs  prod.exs
server/lib/: config.ex  resolutionizer.ex
server/rel/: config.exs
server/test/: test_helper.exs
server/web/: gettext.ex  router.ex  web.ex
test/controllers/: page_controller_test.exs
test/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
web/: router.ex  web.ex
web/channels/: user_socket.ex
web/controllers/: page_controller.ex
web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
(+66 files in other folders)
