name:                resolutionizer-bulk-clause-import
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             AGPL-3
license-file:        LICENSE
author:              Tanner Doshier
maintainer:          git@doshitan.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

  default-extensions:  NoImplicitPrelude

  exposed-modules:     BulkClauseImport

  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , megaparsec


executable bulk-clause-import
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , bytestring
                     , resolutionizer-bulk-clause-import


test-suite test
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

  build-depends:       base >= 4.9 && <4.10
                     , resolutionizer-bulk-clause-import
                     , hspec
                     , hspec-megaparsec
                     , megaparsec